--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,10 @@
     <meta charset="UTF-8">
     <meta name="Viewport" content="width-device-width,initial-scale">
    <link rel="stylesheet" href="Style.css">
- </head>
+ <link rel="stylesheet" href="Style.css">
+ <link rel="preconnect" href="https: //fonts.googleapis.com">
+ <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> "
+  </head>
 
  <body>
  <section class="container principal">
@@ -14,8 +17,10 @@
      <h1>Com o combo+,você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
      <img src="Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Língua">
      <a href="www.alura.com.br"class= "container__botao">Assine por 12x de R$ 120,00*</a>
-     <a href="www.alura.com.br" class="container__botao_secundario">Assinar somente o alura+</a>
+     <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o alura+</a>
+  <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.s</p>
     </div>
+  
 </section>
 
 </body>
